distributed-tracing/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetrycollector
