distributed-tracing/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 namespace: tracing-system
 name: minio
spec:
 selector:
   matchLabels:
     app: minio
 strategy:
   type: Recreate
 template:
   metadata:
     labels:
       # Label is used as selector in the service.
       app: minio
   spec:
     # Refer to the PVC created earlier
     volumes:
       - name: storage
         persistentVolumeClaim:
           # Name of the PVC created earlier
           claimName: minio-pv-claim
     containers:
       - name: minio
         image: minio/minio
         args:
           - server
           - /storage
           - --console-address
           - ":9001"
         ports:
           - containerPort: 9000
           - containerPort: 9001
         volumeMounts:
           - name: storage # must match the volume name, above
             mountPath: "/storage"
---
apiVersion: v1
kind: Service
metadata:
 namespace: tracing-system
 name: minio
spec:
 type: ClusterIP
 ports:
   - port: 9000
     targetPort: 9000
     protocol: TCP
     name: api
   - port: 9001
     targetPort: 9001
     protocol: TCP
     name: console
 selector:
   app: minio
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: tracing-system
  name: minio-console
spec:
  to:
    kind: Service
    name: minio
  port:
    targetPort: console
